# kanban

./: .drain-prs.json  .gitignore  DESIGN.md  Makefile  README.md  cabal.project  config.toml.example  kanban.cabal
.github/workflows/: ci.yml  review-gate.yml
app/: Main.hs
claude-plugin/: README.md
claude-plugin/.claude-plugin/: marketplace.json
claude-plugin/plugins/kanban/.claude-plugin/: plugin.json
claude-plugin/plugins/kanban/commands/: pr-rereview.md  pr-review.md  pr-revise.md  solve.md
claude-plugin/plugins/kanban/scripts/: review_pr.py
codex-plugin/: README.md
codex-plugin/.agents/plugins/: marketplace.json
codex-plugin/plugins/kanban/.codex-plugin/: plugin.json
codex-plugin/plugins/kanban/skills/pr-rereview/: SKILL.md
codex-plugin/plugins/kanban/skills/pr-review/: SKILL.md
codex-plugin/plugins/kanban/skills/pr-review/scripts/: review_pr.py
codex-plugin/plugins/kanban/skills/pr-revise/: SKILL.md
codex-plugin/plugins/kanban/skills/solve/: SKILL.md
docs/: README.md  agent-workflow-contract.md  design.md  development.md  pr-drainer.md  user-guide.md
src/Kanban/: CLI.hs  Cache.hs  Claude.hs  Codex.hs  Config.hs  Domain.hs  Drainer.hs  Fixture.hs  GitHub.hs  GlyphTest.hs  Layout.hs  Process.hs  Provider.hs  PullRequestFlow.hs  Repository.hs  Review.hs  Settings.hs  Solve.hs  StreamReader.hs  Text.hs  Tracker.hs  Transcript.hs  UI.hs  Worker.hs  Workflow.hs
test/: Spec.hs
tools/: approve_issues.py  ci-local.sh  drain_prs.py  drain_prs_service.py  fake_cli.py  install_drainer.py  install_issue_review.py  kanban_config.py  test_agent_workflow_contract.py  test_approve_issues.py  test_claude_plugin.py  test_codex_plugin.py  test_drain_prs.py  test_drain_prs_service.py  test_fast_forward_stash.py  test_install_drainer.py  test_install_issue_review.py  test_integration.py  test_kanban_config.py  test_pure_logic.py
