cabal-version:      3.0
name:               kanban
version:            0.1.0.0
synopsis:           Event-driven GitHub workflow dashboard for the terminal
description:
  A lightweight, keyboard-driven terminal dashboard combining a GitHub
  workflow board with on-demand Codex and Claude usage information.
homepage:           https://github.com/coghex/kanban
bug-reports:        https://github.com/coghex/kanban/issues
license:            MIT
license-file:       LICENSE
author:             Vincent Coghlan
maintainer:         Vincent Coghlan
category:           Development
build-type:         Simple
extra-doc-files:    DESIGN.md

source-repository head
  type: git
  location: https://github.com/coghex/kanban.git

common warnings
  default-language: GHC2024
  default-extensions:
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wredundant-constraints

library
  import: warnings
  hs-source-dirs: src
  exposed-modules:
    Kanban.CLI
    Kanban.Cache
    Kanban.Codex
    Kanban.Domain
    Kanban.Fixture
    Kanban.GlyphTest
    Kanban.GitHub
    Kanban.Layout
    Kanban.Provider
    Kanban.Repository
    Kanban.Text
    Kanban.Tracker
    Kanban.UI
    Kanban.Workflow
  build-depends:
    aeson                 >= 2.2 && < 2.3,
    base                  >= 4.20 && < 4.22,
    brick                 >= 2.6 && < 2.11,
    bytestring            >= 0.12 && < 0.13,
    containers            >= 0.7 && < 0.8,
    directory             >= 1.3 && < 1.4,
    filepath              >= 1.4 && < 1.6,
    optparse-applicative  >= 0.18 && < 0.20,
    process               >= 1.6 && < 1.7,
    text                  >= 2.1 && < 2.2,
    time                  >= 1.12 && < 1.16,
    transformers          >= 0.6 && < 0.7,
    unicode-transforms    >= 0.4 && < 0.5,
    unix                  >= 2.8 && < 2.9,
    vty                   >= 6.2 && < 6.6

executable kanban
  import: warnings
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N1
  build-depends:
    base,
    kanban,
    optparse-applicative,
    text

test-suite kanban-test
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    base,
    bytestring,
    containers,
    directory,
    hspec                 >= 2.11 && < 2.12,
    kanban,
    text,
    time
